--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
-  }
+  },
+  "homepage": "https://octanethegenio.github.io/atto-love-journey/y"
 }
